# esp32s3-snoop

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  ch422g_port.c  ch422g_port.h  controller_can.c  controller_can.h  controller_uart.c  controller_uart.h  esp_io_expander.c  esp_io_expander_ch422g.c  esp_io_expander_ch422g.h  i2c_port.c  i2c_port.h  idf_component.yml  lvgl_port.c  lvgl_port.h  main.c  main.h  model.c  model.h  mvc_helpers.h  port_ch422g.c  port_ch422g.h  ring_buffer.c  ring_buffer.h  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
main/ui/: CMakeLists.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_model_bridge.h  ui_to_if.c  ui_to_if.h
main/ui/screens/: ui_Screen1.c
